Changed id to UUID. Mapper tests done and started building services