@@ -16,7 +16,7 @@
 	<properties>	
 		<liquibase-maven-plugin-version>4.17.0</liquibase-maven-plugin-version>
 		<lombok-version>1.18.24</lombok-version>
-		<jacoco-version>0.8.8</jacoco-version>
+		<jacoco-version>0.8.10</jacoco-version>
 		<java.version>17</java.version>
 		<lombok-mapstruct-binding-version>0.2.0</lombok-mapstruct-binding-version>
 		<mapstruct-version>1.5.3.Final</mapstruct-version>
@@ -110,6 +110,9 @@
 				<groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>${jacoco-version}</version>
+				<configuration>
+					<argLine>@{argLine} -Xmx1024m </argLine>
+				</configuration>
 			    <executions>
 					<execution>
 			            <id>jacoco-initialize</id>
@@ -131,18 +134,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-surefire-plugin</artifactId>
     			<configuration>
-    			<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
-			    <!--
-			        <excludes>
-			            <exclude>DataTest.java</exclude>
-			        </excludes>
-			        <includes>
-			            <include>DataCheck.java</include>
-			        </includes>
-			        -->
+    				<argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
 			    </configuration>			
 			</plugin>
-			<!--
+
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -150,7 +145,7 @@
 				<version>2.14.1</version>
 				<configuration>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx4096m -XX:MaxPermSize=512M ${itCoverageAgent}</argLine>
+					<argLine>@{argLine} -Xmx4096m </argLine>
 				</configuration>
 				<executions>
 					<execution>
@@ -169,32 +164,7 @@
 		        <configuration>                  
 		            <propertyFile>src/main/resources/liquibase.properties</propertyFile>
 		        </configuration>                
-		    </plugin> -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin-version}</version>
-				<configuration>
-
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct-processor</artifactId>
-							<version>${mapstruct-version}</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.24</version>
-						</path>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok-mapstruct-binding</artifactId>
-							<version>0.2.0</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
+		    </plugin>
 		</plugins>
 	</build>
 	
